--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 streamlit==1.52.1
 google-generativeai
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+requests==2.31.0
+python-dotenv==1.0.0
+psycopg[binary]==3.2.3
