--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.0
 requests==2.31.0
 python-dotenv==1.0.0
-psycopg[binary]==3.2.3
+firebase-admin
+google-cloud-firestore
+python-multipart
+slowapi
