--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,19 +7,26 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "dependencies": {
         "@tanstack/react-query": "^5.62.0",
         "@tanstack/react-query-devtools": "^5.62.0",
+        "clsx": "^2.1.1",
+        "framer-motion": "^12.24.12",
         "lucide-react": "^0.468.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.1.0",
+        "tailwind-merge": "^3.4.0",
         "zustand": "^5.0.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.1",
         "@types/node": "^25.0.3",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
@@ -28,8 +35,10 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
+        "jsdom": "^27.0.1",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
-        "vite": "^6.0.5"
+        "vite": "^6.0.5",
+        "vitest": "^3.2.4"
     }
 }
