chore: update gitignore with comprehensive rules for project stack
- Reorganized sections with clear headers for better readability
- Added missing patterns for Python, Node.js, and Firebase
- Removed redundant entries and consolidated similar patterns
- Added exceptions for important files like GEMINI.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,76 +1,92 @@
 # =============================================================================
 # AURA-NOTES-MANAGER .gitignore
-# Comprehensive gitignore for React/FastAPI/Firebase project
+# Ignore rules for React + Vite + FastAPI + Firebase project
 # =============================================================================
 
-# -----------------------------------------------------------------------------
-# PYTHON
-# -----------------------------------------------------------------------------
-.venv/
+# =============================================================================
+# PYTHON - Build artifacts, cache, and test outputs
+# =============================================================================
+# Virtual environments
 venv/
+.venv/
 env/
-.venv
-venv
-env
+
+# Bytecode cache
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
+*.pyc
+*.pyo
+*.pyd
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
+
+# Python package distribution
+*.egg
+*.egg-info/
 eggs/
-.eggs/
+develop-eggs/
+.installed.cfg
+.lib/
 lib/
 lib64/
 parts/
 sdist/
 var/
 wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-.mypy_cache/
+
+# Build output
+build/
+dist/
+.tox/
+.nox/
+
+# Test and coverage
 .pytest_cache/
 .coverage
 htmlcov/
-.tox/
-.nox/
 coverage.xml
 *.cover
 
-# -----------------------------------------------------------------------------
-# NODE / NPM / VITE / REACT
-# -----------------------------------------------------------------------------
+# Type checking
+.mypy_cache/
+.pytype/
+.pyre/
+
+# =============================================================================
+# NODE.JS - Package management and build artifacts
+# =============================================================================
 node_modules/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
 dist/
 dist-ssr/
 build/
 *.local
-.vite/
 .parcel-cache/
+.vite/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# ESLint/TypeScript
 .eslintcache
 .stylelintcache
+.tsbuildinfo
 
-# -----------------------------------------------------------------------------
+# =============================================================================
 # FIREBASE / FIRESTORE
-# -----------------------------------------------------------------------------
+# =============================================================================
 .firebase/
 .firebase-secrets
 firestore-debug.log
 firestore-emulator/
 .firebase-cache/
 
-# -----------------------------------------------------------------------------
-# ENVIRONMENT & SECRETS
-# -----------------------------------------------------------------------------
+# =============================================================================
+# SENSITIVE / RESTRICTED
+# =============================================================================
 .env
 .env.local
 .env.development.local
@@ -87,9 +103,9 @@ credentials.json
 .secrets/
 private/
 
-# -----------------------------------------------------------------------------
-# PROJECT SPECIFIC
-# -----------------------------------------------------------------------------
+# =============================================================================
+# PROJECT-SPECIFIC
+# =============================================================================
 pdfs/
 *.pdf
 settings.local.json
@@ -106,22 +122,19 @@ conductor/setup_state.json
 conductor/archive/
 conductor/code_styleguides/
 
-# Test & cache artifacts
-.pytest_cache/
-test-results/
-tools/__pycache__/
-
 # API cache
 api/cache/
 api/__pycache__/
 api/modules/__pycache__/
 
-# -----------------------------------------------------------------------------
-# IDE
-# -----------------------------------------------------------------------------
+tools/__pycache__/
+
+# =============================================================================
+# IDEs and EDITORS
+# =============================================================================
+.idea/
 .vscode/
 !.vscode/extensions.json
-.idea/
 *.suo
 *.ntvs*
 *.njsproj
@@ -129,29 +142,24 @@ api/modules/__pycache__/
 *.swp
 *.swo
 
-# -----------------------------------------------------------------------------
-# OPERATING SYSTEMS
-# -----------------------------------------------------------------------------
-# Windows
+# =============================================================================
+# OPERATING SYSTEM FILES
+# =============================================================================
 Thumbs.db
 ehthumbs.db
 Desktop.ini
 $RECYCLE.BIN/
-
-# macOS
 .DS_Store
 .AppleDouble
 .LSOverride
 ._*
-
-# Linux
 *~
 .Trash-*/
 .directory
 
-# -----------------------------------------------------------------------------
+# =============================================================================
 # MISC
-# -----------------------------------------------------------------------------
+# =============================================================================
 *.bak
 *.backup
 *.orig
@@ -159,16 +167,24 @@ $RECYCLE.BIN/
 *.patch
 .cursor/
 
-# -----------------------------------------------------------------------------
-# TESTS (keep out of main branch)
-# -----------------------------------------------------------------------------
+# =============================================================================
+# TESTS
+# =============================================================================
 tests/
 test_women_empowerment.py
 e2e/
+test-results/
+.pytest_cache/
 
-# -----------------------------------------------------------------------------
-# DOCUMENTATION (only README.md and GEMINI.md in main branch)
-# -----------------------------------------------------------------------------
+# =============================================================================
+# DOCUMENTATIONS
+# =============================================================================
 documentations/
-GEMINI.md
+
+# =============================================================================
+# EXCEPTIONS - AI agent guidance files
+# =============================================================================
 !GEMINI.md
+
+# Claude Code settings
+.claude/
