feat: Add Knowledge Graph processing features and UI components
- Implement KG processing API functions in explorerApi.ts
- Create KGStatusBadge component for displaying document processing status
- Add ProcessDialog for confirming KG vectorization processing
- Introduce ProcessingQueue component to display current processing status
- Enhance GridView and SidebarTree components to support selection mode
- Update Header component to manage selection mode and integrate new features
- Create FileSelectionBar component for batch processing selected notes
- Add Dialog components for consistent modal UI
- Update useExplorerStore to manage new KG processing state and dialogs
- Modify package.json and package-lock.json to include new dependencies
- Update requirements.txt for backend dependencies related to KG processing
- Enhance run.bat to start Redis and Celery worker for KG processing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,49 @@
-google-generativeai
-deepgram-sdk
+# AURA-NOTES-MANAGER Python Dependencies
+# Generated: 2026-01-20
+
+# =============================================================================
+# Core Framework & Server
+# =============================================================================
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
-requests==2.31.0
+python-multipart==0.0.9
 python-dotenv==1.0.0
-firebase-admin
-google-cloud-firestore
-python-multipart
 slowapi
-neo4j>=5.15.0
+
+# =============================================================================
+# Firebase & Firestore
+# =============================================================================
+firebase-admin==6.5.0
+google-cloud-firestore==2.16.0
+
+# =============================================================================
+# AI & Machine Learning
+# =============================================================================
+google-generativeai==0.8.3
+deepgram-sdk==3.5.0
+vertexai==1.64.0
+google-auth==2.35.0
+
+# =============================================================================
+# Database & Caching
+# =============================================================================
+neo4j==5.25.0
+redis==5.2.0
+
+# =============================================================================
+# Task Queue (Celery for async processing)
+# =============================================================================
+celery==5.4.0
+
+# =============================================================================
+# PDF Processing
+# =============================================================================
+PyMuPDF==1.24.10
+fpdf2==2.7.9
+
+# =============================================================================
+# Utilities
+# =============================================================================
+requests==2.32.3
+numpy==2.1.3
+tiktoken==0.8.0
