--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.2.4",
         "@tanstack/react-query": "^5.62.0",
         "@tanstack/react-query-devtools": "^5.62.0",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.24.12",
         "lucide-react": "^0.468.0",
