feat(07-04): Add Playwright E2E tests for AURA-NOTES-MANAGER
Add comprehensive E2E test suite with 57 tests covering:
- Explorer page layout and navigation
- Grid/List view modes and view switching
- Context menu interactions
- Breadcrumb navigation
- CRUD operations (create, delete confirmation)
- Selection mode for KG processing
- Process dialog workflow
- Processing status indicators
- Responsive design
- Keyboard navigation and accessibility
- Error handling and recovery

Files added:
- frontend/playwright.config.ts - Playwright config with 3 browser projects
- frontend/e2e/fixtures.ts - Shared mock data and test utilities
- frontend/e2e/explorer.spec.ts - Explorer page tests (24 tests)
- frontend/e2e/kg-processing.spec.ts - KG processing tests (18 tests)
- frontend/e2e/health.spec.ts - App health and navigation tests (15 tests)

All 57 tests pass on Chromium in ~58 seconds.

--- a/.gitignore
+++ b/.gitignore
@@ -172,8 +172,9 @@ $RECYCLE.BIN/
 # =============================================================================
 tests/
 test_women_empowerment.py
-e2e/
+# e2e/ - Keep E2E tests tracked (frontend/e2e/)
 test-results/
+playwright-report/
 .pytest_cache/
 
 # =============================================================================
