feat(09-07): Add DOCX parsing support for Word document uploads
- Create DocxParser service with text, table, heading, and metadata extraction
- Integrate into kg_processor.py document processing pipeline
- Add python-docx dependency to requirements.txt
- Handle corrupted, password-protected, and empty documents

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,11 @@ PyMuPDF==1.24.10
 fpdf2==2.7.9
 
 # =============================================================================
+# Document Processing (09-07-PLAN)
+# =============================================================================
+python-docx>=0.8.11
+
+# =============================================================================
 # Utilities
 # =============================================================================
 requests==2.32.3
