feat(api): add comprehensive phase 3 verification and documentation
- Add phase 3 verification script with 10 checks for Celery pipeline readiness
- Create E2E test guide with detailed execution instructions and troubleshooting
- Implement quick Neo4j verification scripts for Windows and Unix
- Fix import path resolution in kg_processor.py and embeddings.py
- Centralize Celery configuration in config.py for single source of truth
- Add validation scripts for phase 2 integration and code structure
- Include query reference documentation for Neo4j operations
- Update .gitignore to preserve E2E test documentation
- Improve task documentation with comprehensive phase 2 integration details

--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,9 @@ test_women_empowerment.py
 test-results/
 playwright-report/
 .pytest_cache/
+# Exception: Keep E2E test documentation (plan deliverable)
+!api/tests/
+!api/tests/E2E_TEST_GUIDE.md
 
 # =============================================================================
 # DOCUMENTATIONS
