--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.24.12",
+        "jszip": "^3.10.1",
         "lucide-react": "^0.468.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -34,6 +35,7 @@
         "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.1",
+        "@types/jszip": "^3.4.0",
         "@types/node": "^25.0.3",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
