--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ python-docx>=0.8.11
 requests==2.32.3
 numpy==2.1.3
 tiktoken==0.8.0
+json-repair==0.35.0
 
 # =============================================================================
 # Testing (Phase 7-05)
