feat(05-01): create seed script and test credentials for auth system

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,15 @@
 # Neo4j Environment Configuration Template
 # Copy this file to .env and fill in your values
 
+# =============================================================================
+# Authentication Configuration
+# =============================================================================
+# Set to "true" to use real Firebase Auth, "false" for mock auth (local dev)
+USE_REAL_FIREBASE=false
+
+# Firebase credentials path (only needed if USE_REAL_FIREBASE=true)
+# FIREBASE_CREDENTIALS=serviceAccountKey.json
+
 # ============================================================================
 # NEO4J DATABASE CONFIGURATION
 # ============================================================================
