--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "@tanstack/react-query-devtools": "^5.62.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "firebase": "^12.8.0",
         "framer-motion": "^12.24.12",
         "jszip": "^3.10.1",
         "lucide-react": "^0.468.0",
