feat(01-01): Firebase project aura-auth-proj with Auth/Firestore
- Enabled Email/Password auth and Firestore (production mode)

- Secured serviceAccountKey-auth.json via .gitignore

- Added Firebase env template and roadmap update

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,9 @@ firestore-emulator/
 *.env
 config.json
 serviceAccountKey.json
+serviceAccountKey*.json
+*adminsdk*.json
+.env.firebase
 credentials.json
 *.key
 *.pem
