feat(02-firestore-schema-rules-02-01): Firestore user schema docs with shared TS/Pydantic models
- Documented users schema with constraints, examples, versioning, and indexes

- Added Firestore user models/validators and aligned user endpoints + auth store types

- Updated roadmap and plan summary for Phase 02 progress

--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,8 @@ playwright-report/
 # DOCUMENTATIONS
 # =============================================================================
 documentations/
+!documentations/
+!documentations/firebase-schema.md
 
 # =============================================================================
 # EXCEPTIONS - AI agent guidance files
