feat(02-03): Firestore rules test suite with emulator + CI
- Added auth/admin/staff/student rules tests and utilities

- Added Jest config, scripts, and CI workflow for emulator runs

- Hardened rules helpers and tracked tests via gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,11 @@ test_women_empowerment.py
 test-results/
 playwright-report/
 .pytest_cache/
+# Firestore security rules tests (keep tracked)
+!tests/
+tests/*
+!tests/firestore/
+!tests/firestore/**
 # Exception: Keep E2E test documentation (plan deliverable)
 !api/tests/
 !api/tests/E2E_TEST_GUIDE.md
