--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "scripts": {
+    "test:rules": "firebase emulators:exec --only firestore \"npx jest tests/firestore/\"",
+    "test:rules:watch": "firebase emulators:exec --only firestore \"npx jest tests/firestore/ --watch\"",
+    "emulators:start": "firebase emulators:start --only firestore,auth"
+  },
   "dependencies": {
     "web-search": "^0.6.2"
+  },
+  "devDependencies": {
+    "@firebase/rules-unit-testing": "^5.0.0",
+    "firebase": "^12.8.0",
+    "jest": "^29.7.0"
   }
 }
