feat(04-03): remove mock login and enforce Firebase auth
- Removed /api/auth/login and auth router wiring

- Gated mock tokens to TESTING and removed Firestore password storage

- Documented Firebase auth flow and updated frontend sign-in

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
-# IMPORTANT: Copy serviceAccountKey-auth.json from Firebase Console
+# Firebase Configuration (production defaults)
+# IMPORTANT: Copy serviceAccountKey.json from Firebase Console
 # DO NOT commit this file to version control
-USE_REAL_FIREBASE=false
-FIREBASE_CREDENTIALS=./serviceAccountKey-auth.json
+
+# USE_REAL_FIREBASE: true uses real Firebase Auth/Firestore in production
+USE_REAL_FIREBASE=true
+
+# FIREBASE_CREDENTIALS: path to Firebase service account key
+FIREBASE_CREDENTIALS=./serviceAccountKey.json
+
+# TESTING: true enables mock token verification when USE_REAL_FIREBASE=false
+TESTING=false
+
+# Firebase project id (used by admin scripts and tooling)
 FIREBASE_PROJECT_ID=aura-auth-proj
