--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "test": "vitest",
+        "test:rules": "firebase emulators:exec --only firestore --project aura-2026 --config ../firebase.json \"npm run test:rules:run\"",
+        "test:rules:run": "jest src/tests/firestore.rules.test.ts",
         "test:e2e": "playwright test",
         "test:e2e:ui": "playwright test --ui",
         "test:e2e:headed": "playwright test --headed"
@@ -32,10 +34,12 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@firebase/rules-unit-testing": "^5.0.0",
         "@playwright/test": "^1.50.0",
         "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.1",
+        "@types/jest": "^30.0.0",
         "@types/jszip": "^3.4.0",
         "@types/node": "^25.0.3",
         "@types/react": "^18.3.18",
@@ -46,7 +50,9 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
+        "jest": "^29.7.0",
         "jsdom": "^27.0.1",
+        "ts-jest": "^29.4.6",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
         "vite": "^6.0.5",
