Refactor Firestore integration and update environment configurations
- Updated Firestore service account key references from `serviceAccountKey.json` to `serviceAccountKey-auth.json` across various tools and scripts.
- Modified frontend environment variables to use a new Firebase project ID and associated URLs.
- Adjusted frontend testing scripts to align with the new Firebase project configuration.
- Changed the server port in the frontend configuration for better compatibility.
- Enhanced the migration script to ensure proper handling of database connections and improved error messages.
- Refactored utility functions in the hierarchy CRUD API for better readability and consistency.
- Added new endpoint to list subjects for a specific semester in the hierarchy CRUD API.
- Improved logging and error handling in the note deletion cascade functionality.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
 # Firebase Configuration (production defaults)
-# IMPORTANT: Copy serviceAccountKey.json from Firebase Console
+# IMPORTANT: Copy serviceAccountKey-auth.json from Firebase Console
 # DO NOT commit this file to version control
 
 # USE_REAL_FIREBASE: true uses real Firebase Auth/Firestore in production
 USE_REAL_FIREBASE=true
 
+# ENVIRONMENT: development | staging | production
+ENVIRONMENT=development
+
+# ALLOWED_ORIGINS: comma-separated CORS origins
+# Example: http://localhost:5173,https://yourdomain.com
+ALLOWED_ORIGINS=http://localhost:5173
+
 # FIREBASE_CREDENTIALS: path to Firebase service account key
-FIREBASE_CREDENTIALS=./serviceAccountKey.json
+FIREBASE_CREDENTIALS=./serviceAccountKey-auth.json
 
 # TESTING: true enables mock token verification when USE_REAL_FIREBASE=false
 TESTING=false
