--- a/.env.template
+++ b/.env.template
@@ -7,8 +7,15 @@
 # Set to "true" to use real Firebase Auth, "false" for mock auth (local dev)
 USE_REAL_FIREBASE=false
 
+# Environment mode: development | staging | production
+ENVIRONMENT=development
+
+# Comma-separated CORS origins
+# Example: http://localhost:5173,https://yourdomain.com
+ALLOWED_ORIGINS=http://localhost:5173
+
 # Firebase credentials path (only needed if USE_REAL_FIREBASE=true)
-# FIREBASE_CREDENTIALS=serviceAccountKey.json
+# FIREBASE_CREDENTIALS=serviceAccountKey-auth.json
 
 # ============================================================================
 # NEO4J DATABASE CONFIGURATION
@@ -35,4 +42,4 @@ NEO4J_PASSWORD=your_password_here
 # Add your existing .env variables below this line
 # Example:
 # DEEPGRAM_API_KEY=your_deepgram_key_here
-# GOOGLE_APPLICATION_CREDENTIALS=path/to/serviceAccountKey.json
+# GOOGLE_APPLICATION_CREDENTIALS=path/to/serviceAccountKey-auth.json
