--- a/frontend/.env.e2e.example
+++ b/frontend/.env.e2e.example
@@ -39,16 +39,16 @@ E2E_STUDENT_PASSWORD=student123
 # -----------------------------------------------------------------------------
 
 # Firebase project ID (for Firebase SDK initialization)
-VITE_FIREBASE_PROJECT_ID=aura-2026
+VITE_FIREBASE_PROJECT_ID=aura-auth-proj
 
 # Firebase API key (for Firebase SDK)
 VITE_FIREBASE_API_KEY=your-api-key-here
 
 # Firebase Auth domain
-VITE_FIREBASE_AUTH_DOMAIN=aura-2026.firebaseapp.com
+VITE_FIREBASE_AUTH_DOMAIN=aura-auth-proj.firebaseapp.com
 
 # Firestore database URL
-VITE_FIRESTORE_URL=https://aura-2026.firebaseio.com
+VITE_FIRESTORE_URL=https://aura-auth-proj.firebaseio.com
 
 # -----------------------------------------------------------------------------
 # E2E Test Configuration
