--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ requests==2.32.3
 numpy==2.1.3
 tiktoken==0.8.0
 json-repair==0.35.0
+tenacity>=8.0.0
 
 # =============================================================================
 # Testing (Phase 7-05)
